alignment fix in login and register

--- a/Style/style.css
+++ b/Style/style.css
@@ -30,21 +30,18 @@
 /*Main content*/
 
 #namelabel, #passwordlabel, #emaillabel, #numberlabel {
-    width: 100%;
     margin-bottom: 18px;
     text-align: center;
 
 }
 
 .ui-field-contain {
-    width: 100%;
     margin: 15px;
     text-align: center;
 
 }
 
 #name, #password, #email, #phoneNo {
-    width: 100%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     padding: 10px;
@@ -52,7 +49,6 @@
 }
 
 #remember-label, #agree-label {
-    width: 100%;
     margin-top: 18px;
     background-color: aliceblue;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
